# vmpc

./: README.md  conanfile.py
src/: CMakeLists.txt
src/main/: App.cpp  App.hpp  BackgroundPanel.cpp  BackgroundPanel.hpp  MainFrame.cpp  MainFrame.hpp  main.cpp  mpc.h
src/main/cpp/: App.cpp  App.hpp  Gui.cpp  Gui.hpp  mpc.h  mpc2.h  pad.h
src/main/cpp/audio/: AbstractAudioWrapper.cpp  AbstractAudioWrapper.hpp  AudioPreferences.cpp  AudioPreferences.hpp  AudioWrapperConfig.hpp  PortAudioWrapper.cpp  PortAudioWrapper.hpp  RtAudioServer.cpp  RtAudioServer.hpp  RtAudioWrapper.cpp  RtAudioWrapper.hpp
src/main/cpp/gfx/: Component.cpp  Component.hpp  GridGroup.cpp  GridGroup.hpp  Group.cpp  Group.hpp  Label.cpp  Label.hpp  Lcd.cpp  Lcd.hpp  Panel.cpp  Panel.hpp  SvgComponent.cpp  SvgComponent.hpp
src/main/cpp/gfx/assets/: bg.h  pad.h  wheel.h
src/main/cpp/kb/: KeyDownHandler.cpp  KeyDownHandler.hpp  KeyUpHandler.cpp  KeyUpHandler.hpp
src/main/cpp/mouse/: MouseDownHandler.cpp  MouseDownHandler.hpp  MouseUpHandler.cpp  MouseUpHandler.hpp
src/main/gui/: GKnob.cpp  GKnob.hpp
src/main/resources/: dpiaware.manifest
test_package/: conanfile.py
